manifests/kafka/kafka-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kafka
  namespace: data
spec:
  entryPoints:
    - kafka
  routes:
    - match: HostSNI(`*`)
      services:
        - name: kafka-kafka-bootstrap
          port: 9094
